@@ -15,13 +15,16 @@ You can build from source (below) or download prebuilt versions of RAMADDA at
 
 
 # Building
-
 To build RAMADDA run:
+<pre>
 ant
+</pre>
 
 This builds:
+<pre>
 dist/repository.war  - For Tomcat
 dist/ramadda<version>.zip  - Stand-alone release
+</pre>
 
 The war is created with the "repository" name so the context path for tomcat
 is /repository
@@ -30,56 +33,69 @@ is /repository
 # Running stand-alone
 
 You can run RAMADDA stand-alone from the source tree. After building do:
+<pre>
    cd  dist/ramadda<version>/
    sh ramadda.sh
+</pre>
 
-You can also run from your classpath.
-
-Add:
+You can also run from your classpath with:
+<pre>
 classpath="<ramadda dir>/src:<ramadda dir>/lib"
+</pre>
 and run:
-java -XX:MaxPermSize=256m -Xmx2048m org.ramadda.repository.server.JettyServer
-
+<pre>
+java  -Xmx2048m org.ramadda.repository.server.JettyServer
+</pre>
 
 # Plugins
 To build the ramadda.org plugins run:
+<pre>
 ant plugins
+</pre>
 This compiles all of the released plugins and installs them in your local
 ~/.ramadda/plugins
 directory
 
 You can build the individual plugins from their build.xml in their own directory, e.g.:
+<pre>
     cd src/org/ramadda/geodata/data
     ant
+</pre>
 
 The user guide and the workshop plugins use a tcl script from the IDV source release.
 We have a copy of that in bin/idvdocgen. This relies on having tclsh in your path. 
 If you don't have this then you can either define the path to tclsh in the build.properties
 file or when you run ant do:
 
+<pre>
      ant -Dtclsh=<path to tclsh>
-
+</pre>
 
 # Making a release
 
 Just do: 
+<pre>
 ant release
+</pre>
 
 This does:
+<pre>
 ant purge;  //does a clean and deletes  the dist directory.
 ant plugins; //builds most of the plugins and makes the allplugins.zip file
 ant ramadda
+</pre>
 
 The allplugins.zip gets copied into the
 ramadda/repository/resources/plugins
 dir and is included in the ramadda release.
 
 The result of the release target is:
+<pre>
 dist/repository.war  - The war to be used by Tomcat
 dist/ramadda<version>.zip  - The zip file that holds the stand-alone RAMADDA release (which uses Jetty)
 dist/repositoryclient.jar  - Used by 3rd party clients (e.g., IDV, JGRASS) 
 dist/repositoryclient.zip  - To run the stand-alone command line client
-
+</pre>
 
 # RAMADDA Source  Tree
 
@@ -89,8 +105,10 @@ There is a build.xml there that does all of the building. The top level
 build.xml here can be used to build ramadda and the plugins
 
 The plugins are in
+<pre>
 src/org/ramadda/plugins
 src/org/ramadda/geodata
+</pre>
 
 lib:
 Contains all of the jars RAMADDA depends on.
